# CutieCam

./: README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/notwrench/cutiecam/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/notwrench/cutiecam/: MainActivity.kt
android/app/src/main/java/com/notwrench/cutiecam/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/notwrench/cutiecam/: ExampleUnitTest.kt
android/gradle/wrapper/: gradle-wrapper.properties
desktop/: Cargo.toml
desktop/src/: adb.rs  main.rs  server.rs  video.rs  virtual_cam.rs
