[package]
name = "cutiecam"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
tokio = { version = "1.52.3", features = ["full"] }
bytes = "1.7.1"
image = { version = "0.25.0", default-features = false, features = ["jpeg"] }
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security"
] }